nginx-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: pod-namespace
